# 08-DayPilot-api

./: .env  daypilot.db  main.py  pyproject.toml  requirements.txt
agentz/: planner_agent.py
db/: database.py
models/: schemas.py
routers/: chat.py  goals.py  habits.py  progress.py  schedule.py  users.py
services/: goal_service.py  progress_service.py  schedule_service.py
